--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build --prod",
+        "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e",
-        "postinstall": "npm run tsformat",
-        "tsformat": "tsfmt -r"
+        "e2e": "ng e2e"
     },
     "private": true,
     "dependencies": {
